--- a/styles/main/main.css
+++ b/styles/main/main.css
@@ -163,7 +163,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 24px;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 256px);
     position: fixed;
     bottom: 0;
     overflow: scroll;
